--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "components-font-awesome": "^4.6.3",
     "angular-ui-router": "0.3.1",
     "estilos": "https://github.com/octaviovillegas/estilos.git",
-    "satellizer": "^0.15.5"
+    "satellizer": "^0.15.5",
+    "bootstrap-social": "^5.0.0"
   }
 }
