--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "angular-ui-router": "0.3.1",
     "estilos": "https://github.com/octaviovillegas/estilos.git",
     "satellizer": "^0.15.5",
-    "bootstrap-social": "^5.0.0"
+    "bootstrap-social": "^5.0.0",
+    "angular-validation-match": "^1.9.0"
   }
 }
